Fix layout overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,6 @@ body {
   color: var(--color-dark);
   font-family: Raleway, sans-serif;
   font-size: var(--font-size-base);
-  overflow-x: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -51,14 +50,20 @@ header svg {
 main {
   flex: 1;
   background-color: var(--color-light);
-  height: 100%;
   position: relative;
   display: flex;
+  overflow-x: hidden;
 }
 
 section {
-  padding: 2em;
+  padding: 1.75em;
   flex: 1;
+  font-size:  1rem;
+}
+
+section h2 {
+  font-weight: 600;
+  font-size: 1.5em;
 }
 
 nav {
@@ -125,6 +130,16 @@ nav svg {
     font-size: 1.75rem;
     padding: 1em;
     position: relative;
+  }
+
+  section {
+    padding: 2.25em;
+  }
+
+  nav {
+    position: relative;
+    right: unset;
+    height: unset;
   }
 
   #menu-btn {
